--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "build:dev": "bun run build && cp -r dist/* /home/martino/repos/sharkord/apps/server/data/plugins/ && cp ./bin/ffmpeg /home/martino/repos/sharkord/apps/server/data/plugins/sharkord-iptv/bin && chmod +x /home/martino/repos/sharkord/apps/server/data/plugins/sharkord-iptv/bin/ffmpeg"
   },
   "dependencies": {
+    "fuse.js": "^7.1.0",
+    "iptv-playlist-parser": "^0.15.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
