chore: update plugin

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "sharkord-iptv",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "module": "src/index.ts",
   "sharkord": {
-    "entry": "index.js",
+    "entry": {
+      "server": "server.js",
+      "client": "client.js"
+    },
     "author": "Diogo Martino",
     "homepage": "https://google.com",
     "description": "A plugin that allows users to stream IPTV channels directly within Sharkord",
@@ -11,8 +14,9 @@
   },
   "type": "module",
   "scripts": {
-    "build": "bun build src/index.ts --outdir dist/sharkord-iptv --target bun --minify --format esm && cp package.json dist/sharkord-iptv/ && mkdir -p dist/sharkord-iptv/bin",
-    "build:dev": "bun run build && cp -r dist/* /home/martino/repos/sharkord/apps/server/data/plugins/ && cp ./bin/ffmpeg /home/martino/repos/sharkord/apps/server/data/plugins/sharkord-iptv/bin && chmod +x /home/martino/repos/sharkord/apps/server/data/plugins/sharkord-iptv/bin/ffmpeg"
+    "build": "bun build.ts",
+    "build:dev": "bun run build && cp -r dist/* /home/martino/repos/sharkord/apps/server/data/plugins/ && cp ./bin/ffmpeg /home/martino/repos/sharkord/apps/server/data/plugins/sharkord-iptv/bin/ffmpeg && chmod +x /home/martino/repos/sharkord/apps/server/data/plugins/sharkord-iptv/bin/ffmpeg",
+    "build:zip": "zip -r sharkord-iptv.zip dist/*"
   },
   "dependencies": {
     "fuse.js": "^7.1.0",
